package kr.hhplus.be.server.pointHistory.domain;
/**
 * 포인트 이력 유형
 */
public enum PointType {
    CHARGE, // 충전
    USE     // 사용
}