classDiagram
    direction TB

    class User {
        Long userId
        Long point // 보유포인트
        LocalDateTime createdDt // 가입일시
        Long version // Optimistic Lock용
        +포인트잔액조회(userId)
        +포인트충전(userId, amount)
        +포인트차감(userId, amount)
    }

    class PointHistory {
        Long pointHistoryId
        Long userId
        Long amount
        Long balanceAfter
        PointType type // 타입
        LocalDateTime createdDt // 생성일시
        +포인트이력조회(userId)
        +포인트이력저장(userId, 이력타입, 일시, amount, balanceAfter)
    }

    class Order {
        Long orderId
        Long userId
        Long totalPrice // 결제금액
        OrderStatus status // 상태
        LocalDateTime orderedDt // 주문일시
        +주문요청(userId, List<OrderItemRequest>, couponId)
        +결제확인(orderId)
        +주문내역조회(userId)
    }

    class OrderItem {
        Long orderItemId
        Long orderId
        Long productId
        String product_name
        Long quantity // 수량
        Long unitPrice // 상품단일가격
        Long totalPrice // 총가격
        OrderStatus status // 상태
        LocalDateTime orderedDt // 주문일시
        +주문상세조회(orderId)
        +인기상품조회(몇개자를지 , 날짜)
    }

    class OrderPayment {
        Long orderPaymentId
        Long orderId
        Long couponId
        Long originalPrice // 총_원가_금액
        Long discountAmount // 할인_금액
        Long finalPrice // 총_결제_금액
        LocalDateTime paidDt // 결제일시
        +주문결제내역조회(orderId)
    }

    class Product {
        Long productId
        String name // 상품명
        Long price // 가격
        Long stock // 재고
        +제품전체조회()
        +제품상세조회(productId)
    }

    class CouponPolicy {
        Long couponPolicyId
        String name // 쿠폰명
        Long discountRate // 할인율
        Long issuedTotal // 총 발급수량
        Long issuedRemain // 잔여수량
        Integer expiredDays // 쿠폰유효기간_일수
        Long version // Optimistic Lock용
        +발급가능_여부확인(couponId)
        -쿠폰발급시_수량감소(couponId)
        +선착순쿠폰발급(userId)
    }

    class Coupon {
        Long couponId
        Long couponPolicyId
        Long userId
        String name // 쿠폰명 최적화용
        Long discountRate // 할인율 최적화용
        LocalDateTime issuedDt // 발급일시
        LocalDateTime usedDt // 사용일시
        LocalDateTime expiredDt // 만료일시
        Boolean isUsed
        +보유쿠폰조회(userId)
        +쿠폰사용가능조회(userId, couponId)
    }

    class PointType {
        <<enumeration>>
        CHARGE 충전
        USE 사용
    }

    class OrderStatus {
        <<enumeration>>
        CREATED 주문생성
        PAID 결제성공
        COMPLETED 주문완료
        PAYMENT_FAILED 결제실패
    }

    class ExternalOrderSender {
        +send(orderId, userId, totalAmount, List<OrderItem>)
    }

%% 관계
    User           --> PointHistory : 포인트이력보유
    User           --> Order        : 주문함
    Order          --> OrderItem    : 포함함
    Product        --> OrderItem    : 주문됨
    Order          --> OrderPayment : 결제관리
    User           --> Coupon       : 쿠폰보유
    CouponPolicy   --> Coupon       : 발급됨
    PointHistory   --> PointType
    Order          --> OrderStatus : 상태관리
    Order          --> ExternalOrderSender : 외부전송
OrderItem      --> OrderStatus : 상태관리